# axum-postgres-keycloak

./: .gitignore  Cargo.toml  README.md
distribution/dev/: clean.sh  docker-compose.yaml  run.sh
distribution/dev/database/: init.sql
distribution/dev/keycloak/imports/: realm-export.json
distribution/dev/keycloak/themes/app/login/: theme.properties
distribution/dev/keycloak/themes/app/login/resources/css/: login.css  tile.css
distribution/dev/postman/: axum-rest.postman_collection.json
src/repository/src/repository/: question_repository.rs
src/service/src/user/: user_service.rs
src/utils/: Cargo.toml
src/utils/src/core/: cache.rs  keycloak.rs  mod.rs  server.rs
src/utils/src/core/dto/: keycloak_token.rs  mod.rs
src/utils/src/error/: app_auth_error.rs  app_error.rs  app_integration_error.rs  app_repository_error.rs  mod.rs
src/web/: Cargo.toml
src/web/src/: server.rs
src/web/src/middlewares/: auth.rs
src/web/src/middlewares/dto/: user.rs
src/web/src/routes/user/: dto.rs  handlers.rs
src/web/src/utils/: error.rs
